--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.3.2
   http: ^1.2.2
+  crypto: ^3.0.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
