--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   http: ^1.2.2
   crypto: ^3.0.5
   intl: ^0.19.0
+  firebase_core: ^3.5.0
+  cloud_firestore: ^5.4.2
+  firebase_core_web: ^2.18.1
 
 dev_dependencies:
   flutter_test:
