--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_core: ^3.5.0
   cloud_firestore: ^5.4.2
   firebase_core_web: ^2.18.1
+  firebase_storage: ^12.1.2
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
