--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_storage: ^12.1.2
   image_picker: ^1.0.7
   path_provider: ^2.1.2
+  firebase_messaging: ^15.1.2
 
 dev_dependencies:
   flutter_test:
